namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-warrant-risk-assessment-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-warrant-risk-assessment-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ndelius_service_team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-warrant-risk-assessment-notifications"
    cloud-platform.justice.gov.uk/application: "HMPPS Warrant Risk Assessment"
    cloud-platform.justice.gov.uk/owner: "National Delius Service Team / Unilink <hmpps-unilink-delius@digital.justice.gov.uk>"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-warrant-risk-assessment-ui"
    cloud-platform.justice.gov.uk/team-name: "unilink"
